--- a/services/student03/Dockerfile
+++ b/services/student03/Dockerfile
@@ -1,6 +1,6 @@
 FROM busybox:stable
 WORKDIR /srv
-RUN printf "Hello, I am Juan Fernando Calle 😎\n" > index.html \
+RUN printf "Hello, I am Juan Fernando Calle \n" > index.html \
  && printf "ok\n" > health
 EXPOSE 8080
 CMD ["sh", "-c", "httpd -f -p 8080 -h /srv"]
